[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/environment/house_environment.tres" type="TileSet" id=1]
[ext_resource path="res://src/player/spawner/player_spawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/levels/BG_Music.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/levels/go_to_another_level/go_to_another_level.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/levels/house/house.gd" type="Script" id=5]
[ext_resource path="res://src/levels/house/Mombunny.png" type="Texture" id=6]
[ext_resource path="res://Background.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/environment/tilemap_generator/tilemap_generator.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/collectables/pills/double_jump/double_jump_pill.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/collectables/pills/red_blue/red_blue_pill.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/collectables/pills/green_yellow/green_yellow_pill.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/levels/house/Control.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 56 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 80, 40 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 80, 40 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 80, 40 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 80, 40 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 5 ), SubResource( 4 ), SubResource( 2 ), SubResource( 2 ), SubResource( 2 ), SubResource( 2 ), SubResource( 2 ) ],
"loop": true,
"name": "dafault",
"speed": 4.0
} ]

[node name="House" type="TileMap"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -8, 0, 0, -7, 0, 131072, -6, 0, 131072, -5, 0, 131072, -4, 0, 131072, -3, 0, 131072, -2, 0, 131072, -1, 0, 131072, -65536, 0, 131072, -65535, 0, 131072, -65534, 0, 131072, -65533, 0, 131072, -65532, 0, 131072, -65531, 0, 131072, -65530, 0, 131072, -65529, 0, 131072, -65528, 0, 131072, -65527, 0, 131072, -65526, 0, 131072, -65525, 0, 131072, -65524, 0, 131072, -65523, 0, 131072, -65522, 0, 131072, -65521, 0, 131072, -65520, 0, 131072, -65519, 0, 131072, -65518, 0, 131072, -65517, 0, 131072, -65516, 0, 131072, -65515, 0, 131072, -65514, 0, 131072, -65513, 0, 131072, -65512, 0, 131072, -65511, 0, 131072, -65510, 0, 131072, -65509, 0, 131072, -65508, 0, 131072, -65507, 0, 131072, -65506, 0, 131072, -65505, 0, 131072, -65504, 0, 131072, -65503, 0, 131072, -65502, 0, 131072, -65501, 0, 131072, -65500, 0, 131072, -65499, 0, 131072, -65498, 0, 131072, -65497, 0, 131072, -65496, 0, 1, 65528, 0, 131074, 65529, 0, 262144, 65530, 0, 262144, 65531, 0, 262144, 65532, 0, 262144, 65533, 0, 262144, 65534, 0, 262144, 65535, 0, 262144, 0, 0, 262144, 1, 0, 262144, 2, 0, 262144, 3, 0, 262144, 4, 0, 262144, 5, 0, 262144, 6, 0, 262144, 7, 0, 262144, 8, 0, 262144, 9, 0, 262144, 10, 0, 262144, 11, 0, 262144, 12, 0, 262144, 13, 0, 262144, 14, 0, 262144, 15, 0, 262144, 16, 0, 262144, 17, 0, 262144, 18, 0, 262144, 19, 0, 262144, 20, 0, 262144, 21, 0, 262144, 22, 0, 262144, 23, 0, 262144, 24, 0, 262144, 25, 0, 262144, 26, 0, 262144, 27, 0, 262144, 28, 0, 262144, 29, 0, 262144, 30, 0, 262144, 31, 0, 262144, 32, 0, 262144, 33, 0, 262144, 34, 0, 262144, 35, 0, 262144, 36, 0, 262144, 37, 0, 262144, 38, 0, 262144, 39, 0, 262144, 40, 0, 65538, 131064, 0, 131074, 131065, 0, 262144, 131066, 0, 262144, 131067, 0, 262144, 131068, 0, 262144, 131069, 0, 262144, 131070, 0, 131073, 131071, 0, 131073, 65536, 0, 131073, 65537, 0, 131073, 65538, 0, 131073, 65539, 0, 131073, 65540, 0, 131073, 65541, 0, 131073, 65542, 0, 131073, 65543, 0, 131073, 65544, 0, 131073, 65545, 0, 131073, 65546, 0, 131073, 65547, 0, 131073, 65548, 0, 131073, 65549, 0, 131073, 65550, 0, 131073, 65551, 0, 131073, 65552, 0, 131073, 65553, 0, 131073, 65554, 0, 131073, 65555, 0, 131073, 65556, 0, 131073, 65557, 0, 131073, 65558, 0, 131073, 65559, 0, 131073, 65560, 0, 131073, 65561, 0, 131073, 65562, 0, 131073, 65563, 0, 131073, 65564, 0, 131073, 65565, 0, 131073, 65566, 0, 262144, 65567, 0, 262144, 65568, 0, 262144, 65569, 0, 262144, 65570, 0, 262144, 65571, 0, 262144, 65572, 0, 262144, 65573, 0, 262144, 65574, 0, 262144, 65575, 0, 262144, 65576, 0, 65538, 196600, 0, 131074, 196601, 0, 262144, 196602, 0, 262144, 196603, 0, 262144, 196604, 0, 262144, 196605, 0, 262147, 131102, 0, 131074, 131103, 0, 262144, 131104, 0, 262144, 131105, 0, 262144, 131106, 0, 262144, 131107, 0, 262144, 131108, 0, 262144, 131109, 0, 262144, 131110, 0, 262144, 131111, 0, 262144, 131112, 0, 65538, 262136, 0, 131074, 262137, 0, 262144, 262138, 0, 262144, 262139, 0, 262144, 262140, 0, 262147, 196638, 0, 131074, 196639, 0, 262144, 196640, 0, 262144, 196641, 0, 262144, 196642, 0, 262144, 196643, 0, 262144, 196644, 0, 262144, 196645, 0, 262144, 196646, 0, 262144, 196647, 0, 262144, 196648, 0, 65538, 327672, 0, 131074, 327673, 0, 262144, 327674, 0, 131073, 327675, 0, 65537, 262174, 0, 262146, 262175, 0, 131073, 262176, 0, 131073, 262177, 0, 131073, 262178, 0, 131073, 262179, 0, 262144, 262180, 0, 262144, 262181, 0, 262144, 262182, 0, 262144, 262183, 0, 262144, 262184, 0, 65538, 393208, 0, 131074, 393209, 0, 65538, 327701, 0, 196610, 327702, 0, 196611, 327715, 0, 131074, 327716, 0, 262144, 327717, 0, 262144, 327718, 0, 262144, 327719, 0, 262144, 327720, 0, 65538, 458744, 0, 131074, 458745, 0, 65538, 458749, 0, 262144, 393237, 0, 131074, 393238, 0, 65538, 393251, 0, 262146, 393252, 0, 262144, 393253, 0, 262144, 393254, 0, 262144, 393255, 0, 262144, 393256, 0, 65538, 524280, 0, 131074, 524281, 0, 65538, 524285, 0, 262144, 524286, 0, 196611, 458773, 0, 131074, 458774, 0, 65538, 458788, 0, 131074, 458789, 0, 262144, 458790, 0, 262144, 458791, 0, 262144, 458792, 0, 65538, 589816, 0, 131074, 589817, 0, 65538, 589819, 0, 0, 589820, 0, 131072, 589821, 0, 262144, 589822, 0, 262144, 589823, 0, 131072, 524288, 0, 131072, 524289, 0, 131072, 524290, 0, 131072, 524291, 0, 1, 524298, 0, 0, 524299, 0, 131072, 524300, 0, 131072, 524301, 0, 131072, 524302, 0, 131072, 524303, 0, 131072, 524304, 0, 131072, 524305, 0, 131072, 524306, 0, 131072, 524307, 0, 131072, 524308, 0, 131072, 524309, 0, 262144, 524310, 0, 262144, 524311, 0, 131072, 524312, 0, 131072, 524313, 0, 131072, 524314, 0, 131072, 524315, 0, 131072, 524316, 0, 131072, 524317, 0, 131072, 524318, 0, 196611, 524324, 0, 262146, 524325, 0, 262144, 524326, 0, 262144, 524327, 0, 262144, 524328, 0, 65538, 655352, 0, 131074, 655353, 0, 65538, 655355, 0, 65536, 655356, 0, 131073, 655357, 0, 131073, 655358, 0, 131073, 655359, 0, 131073, 589824, 0, 131073, 589825, 0, 131073, 589826, 0, 131073, 589827, 0, 262144, 589828, 0, 196609, 589829, 0, 196609, 589830, 0, 196609, 589831, 0, 196609, 589832, 0, 196609, 589833, 0, 196609, 589834, 0, 262144, 589835, 0, 131073, 589836, 0, 131073, 589837, 0, 131073, 589838, 0, 131073, 589839, 0, 131073, 589840, 0, 262144, 589841, 0, 262144, 589842, 0, 131073, 589843, 0, 131073, 589844, 0, 131073, 589845, 0, 131073, 589846, 0, 131073, 589847, 0, 131073, 589848, 0, 131073, 589849, 0, 131073, 589850, 0, 131073, 589851, 0, 131073, 589852, 0, 131073, 589853, 0, 131073, 589854, 0, 262144, 589855, 0, 196611, 589861, 0, 262146, 589862, 0, 262144, 589863, 0, 262144, 589864, 0, 65538, 720888, 0, 131074, 720889, 0, 65538, 655376, 0, 131074, 655377, 0, 65538, 655390, 0, 131074, 655391, 0, 262144, 655392, 0, 196611, 655398, 0, 131074, 655399, 0, 262144, 655400, 0, 65538, 786424, 0, 131074, 786425, 0, 65538, 720912, 0, 131074, 720913, 0, 65538, 720926, 0, 131074, 720927, 0, 262144, 720928, 0, 262144, 720929, 0, 196611, 720934, 0, 131074, 720935, 0, 262144, 720936, 0, 65538, 851960, 0, 131074, 851961, 0, 65538, 786448, 0, 131074, 786449, 0, 65538, 786462, 0, 131074, 786463, 0, 262144, 786464, 0, 262144, 786465, 0, 262144, 786466, 0, 1, 786470, 0, 131074, 786471, 0, 262144, 786472, 0, 65538, 917496, 0, 131074, 917497, 0, 65538, 851984, 0, 131074, 851985, 0, 65538, 851998, 0, 131074, 851999, 0, 262144, 852000, 0, 262144, 852001, 0, 262144, 852002, 0, 65538, 852006, 0, 131074, 852007, 0, 262144, 852008, 0, 65538, 983032, 0, 131074, 983033, 0, 65538, 917520, 0, 131074, 917521, 0, 65538, 917534, 0, 131074, 917535, 0, 262144, 917536, 0, 262144, 917537, 0, 262144, 917538, 0, 65538, 917542, 0, 131074, 917543, 0, 262144, 917544, 0, 65538, 1048568, 0, 131074, 1048569, 0, 65538, 983056, 0, 131074, 983057, 0, 65538, 983070, 0, 131074, 983071, 0, 262144, 983072, 0, 262144, 983073, 0, 262144, 983074, 0, 65538, 983078, 0, 131074, 983079, 0, 262144, 983080, 0, 65538, 1114104, 0, 131074, 1114105, 0, 65538, 1048592, 0, 131074, 1048593, 0, 65538, 1048606, 0, 131074, 1048607, 0, 262144, 1048608, 0, 262144, 1048609, 0, 262144, 1048610, 0, 65538, 1048614, 0, 131074, 1048615, 0, 262144, 1048616, 0, 65538, 1179640, 0, 131074, 1179641, 0, 262144, 1179642, 0, 131072, 1179643, 0, 131072, 1179644, 0, 131072, 1179645, 0, 131072, 1179646, 0, 131072, 1179647, 0, 131072, 1114112, 0, 131072, 1114113, 0, 131072, 1114114, 0, 131072, 1114115, 0, 131072, 1114116, 0, 131072, 1114117, 0, 131072, 1114118, 0, 131072, 1114119, 0, 131072, 1114120, 0, 131072, 1114121, 0, 131072, 1114122, 0, 131072, 1114123, 0, 131072, 1114124, 0, 131072, 1114125, 0, 131072, 1114126, 0, 131072, 1114127, 0, 131072, 1114128, 0, 262144, 1114129, 0, 262144, 1114130, 0, 131072, 1114131, 0, 131072, 1114132, 0, 131072, 1114133, 0, 131072, 1114134, 0, 131072, 1114135, 0, 131072, 1114136, 0, 131072, 1114137, 0, 131072, 1114138, 0, 131072, 1114139, 0, 131072, 1114140, 0, 131072, 1114141, 0, 131072, 1114142, 0, 262144, 1114143, 0, 262144, 1114144, 0, 262144, 1114145, 0, 262144, 1114146, 0, 65538, 1114150, 0, 131074, 1114151, 0, 262144, 1114152, 0, 65538, 1245176, 0, 65536, 1245177, 0, 131073, 1245178, 0, 131073, 1245179, 0, 131073, 1245180, 0, 131073, 1245181, 0, 131073, 1245182, 0, 262144, 1245183, 0, 262144, 1179648, 0, 262144, 1179649, 0, 262144, 1179650, 0, 262144, 1179651, 0, 262144, 1179652, 0, 262144, 1179653, 0, 262144, 1179654, 0, 262144, 1179655, 0, 262144, 1179656, 0, 262144, 1179657, 0, 262144, 1179658, 0, 262144, 1179659, 0, 262144, 1179660, 0, 262144, 1179661, 0, 262144, 1179662, 0, 262144, 1179663, 0, 262144, 1179664, 0, 262144, 1179665, 0, 262144, 1179666, 0, 262144, 1179667, 0, 262144, 1179668, 0, 262144, 1179669, 0, 262144, 1179670, 0, 262144, 1179671, 0, 262144, 1179672, 0, 262144, 1179673, 0, 262144, 1179674, 0, 262144, 1179675, 0, 262144, 1179676, 0, 262144, 1179677, 0, 262144, 1179678, 0, 262144, 1179679, 0, 262144, 1179680, 0, 262144, 1179681, 0, 262144, 1179682, 0, 65538, 1179686, 0, 131074, 1179687, 0, 262144, 1179688, 0, 65538, 1310718, 0, 131074, 1310719, 0, 262144, 1245184, 0, 262144, 1245185, 0, 262144, 1245186, 0, 262144, 1245187, 0, 262144, 1245188, 0, 262144, 1245189, 0, 262144, 1245190, 0, 262144, 1245191, 0, 262144, 1245192, 0, 262144, 1245193, 0, 262144, 1245194, 0, 262144, 1245195, 0, 262144, 1245196, 0, 262144, 1245197, 0, 262144, 1245198, 0, 262144, 1245199, 0, 262144, 1245200, 0, 262144, 1245201, 0, 262144, 1245202, 0, 262144, 1245203, 0, 262144, 1245204, 0, 262144, 1245205, 0, 262144, 1245206, 0, 262144, 1245207, 0, 262144, 1245208, 0, 262144, 1245209, 0, 262144, 1245210, 0, 262144, 1245211, 0, 262144, 1245212, 0, 262144, 1245213, 0, 262144, 1245214, 0, 262144, 1245215, 0, 262144, 1245216, 0, 262144, 1245217, 0, 262144, 1245218, 0, 65538, 1245222, 0, 262146, 1245223, 0, 131073, 1245224, 0, 262147, 1376254, 0, 65536, 1376255, 0, 131073, 1310720, 0, 131073, 1310721, 0, 131073, 1310722, 0, 131073, 1310723, 0, 131073, 1310724, 0, 131073, 1310725, 0, 131073, 1310726, 0, 131073, 1310727, 0, 131073, 1310728, 0, 131073, 1310729, 0, 131073, 1310730, 0, 131073, 1310731, 0, 131073, 1310732, 0, 131073, 1310733, 0, 131073, 1310734, 0, 131073, 1310735, 0, 131073, 1310736, 0, 131073, 1310737, 0, 131073, 1310738, 0, 131073, 1310739, 0, 131073, 1310740, 0, 131073, 1310741, 0, 131073, 1310742, 0, 131073, 1310743, 0, 131073, 1310744, 0, 131073, 1310745, 0, 131073, 1310746, 0, 131073, 1310747, 0, 131073, 1310748, 0, 131073, 1310749, 0, 131073, 1310750, 0, 131073, 1310751, 0, 131073, 1310752, 0, 131073, 1310753, 0, 131073, 1310754, 0, 262147 )
script = ExtResource( 5 )

[node name="PlayerSpawner" parent="." instance=ExtResource( 2 )]
position = Vector2( 1176, 424 )

[node name="Camera2D" type="Camera2D" parent="PlayerSpawner"]
position = Vector2( -749.492, 11.844 )
limit_left = -228
limit_top = 0
limit_right = 1268
limit_bottom = 596
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="GoToAnotherScene" parent="." instance=ExtResource( 4 )]
position = Vector2( 1024, 208 )
level_path = "res://src/levels/level1/Level 1.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoToAnotherScene"]
position = Vector2( 143, 384 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 880, 504 )
scale = Vector2( 2, 2 )
z_index = -1
frames = SubResource( 6 )
animation = "dafault"
frame = 4
playing = true

[node name="BG_Music" parent="." instance=ExtResource( 3 )]

[node name="Background" parent="." instance=ExtResource( 7 )]
position = Vector2( 8.98987, 1.49832 )
z_index = -2

[node name="TileMapGenerator" parent="." instance=ExtResource( 8 )]
tile_data = PoolIntArray( 524282, 0, 0, 589818, 0, 0, 655354, 0, 0, 720890, 0, 0, 786426, 0, 0, 851962, 0, 0, 917498, 0, 0, 983034, 0, 0, 1048570, 0, 0, 1114106, 0, 0 )
source = "res://src/environment/ladders.tscn"

[node name="Pill_DoubleJump" parent="." instance=ExtResource( 9 )]
position = Vector2( 648, 240 )

[node name="green_yellow_pill" parent="." instance=ExtResource( 11 )]
position = Vector2( 112, 240 )
temp_movement_speed = 75
time = 3

[node name="green_yellow_pill2" parent="." instance=ExtResource( 11 )]
position = Vector2( 352, 192 )
rotation = -1.57079
temp_movement_speed = -125
time = 3

[node name="Pill_RedBlue" parent="." instance=ExtResource( 10 )]
position = Vector2( -112, 240 )
temp_jump_force = 75
time = 5

[node name="Pill_RedBlue2" parent="." instance=ExtResource( 10 )]
position = Vector2( 8, 192 )
rotation = -1.57079
temp_jump_force = -125
time = 3

[node name="TileMapGenerator2" parent="." instance=ExtResource( 8 )]
tile_data = PoolIntArray( 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0 )
source = "res://src/environment/falling_ground/falling_ground.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="CanvasLayer/Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/PopupDialog"]
margin_right = 14.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="CanvasLayer/Control/PopupDialog/PanelContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "this adjusts jump height,
facing right is an increase.
left is decrease. (press ctrl to dismiss)"

[node name="PopupDialog2" type="PopupDialog" parent="CanvasLayer/Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/PopupDialog2"]
margin_right = 14.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="CanvasLayer/Control/PopupDialog2/PanelContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "this gives you double jump 
for the rest of the level.
(press crtl to dismiss)"

[node name="PopupDialog3" type="PopupDialog" parent="CanvasLayer/Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/PopupDialog3"]
margin_right = 14.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="CanvasLayer/Control/PopupDialog3/PanelContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "This adjusts move speed
again;
Right facing is an increase: Left facing is a decrease.
(press ctrl to dismiss)"

[node name="PopupDialog4" type="PopupDialog" parent="CanvasLayer/Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/PopupDialog4"]
margin_right = 14.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="CanvasLayer/Control/PopupDialog4/PanelContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "Mom is very sick and needs medicine;
I hear a lot of caughing...
[Press tab to check in on her in her room: You can always press tab]
(press ctrl or tab to dismiss)"

[node name="PopupDialog5" type="PopupDialog" parent="CanvasLayer/Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/PopupDialog5"]
margin_right = 14.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="CanvasLayer/Control/PopupDialog5/PanelContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "Lets go out looking for money
(press ctrl or tab to dismiss)"
[connection signal="area_entered" from="Pill_DoubleJump" to="CanvasLayer/Control" method="_on_Pill_DoubleJump_area_entered"]
[connection signal="area_entered" from="green_yellow_pill" to="CanvasLayer/Control" method="_on_green_yellow_pill_area_entered"]
[connection signal="area_entered" from="green_yellow_pill2" to="CanvasLayer/Control" method="_on_green_yellow_pill2_area_entered"]
[connection signal="area_entered" from="Pill_RedBlue" to="CanvasLayer/Control" method="_on_Pill_RedBlue_area_entered"]
[connection signal="popup_hide" from="CanvasLayer/Control/PopupDialog" to="CanvasLayer/Control" method="_on_PopupDialog_popup_hide"]
[connection signal="popup_hide" from="CanvasLayer/Control/PopupDialog2" to="CanvasLayer/Control" method="_on_PopupDialog2_popup_hide"]
[connection signal="popup_hide" from="CanvasLayer/Control/PopupDialog3" to="CanvasLayer/Control" method="_on_PopupDialog3_popup_hide"]
[connection signal="popup_hide" from="CanvasLayer/Control/PopupDialog4" to="CanvasLayer/Control" method="_on_PopupDialog4_popup_hide"]
